--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,4 +6,16 @@
   a {
     @apply transition-colors;
   }
+  [aria-hidden='true'] {
+    @apply sr-only;
+  }
+}
+
+@layer utilities {
+  .line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
