--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,7 @@
   code[class*='language-'],
   pre[class*='language-'] {
     font-size: initial !important;
+    background-color: #1f2937 !important;
   }
 }
 /*! purgecss end ignore */
